Fixed overflow of post title in post list and added title attribute to links.

--- a/_sass/index-page.scss
+++ b/_sass/index-page.scss
@@ -19,6 +19,7 @@
         text-align: left;
 
         .post-header {
+            overflow: hidden;
             border-bottom: 1px solid #eeeeee;
             margin-bottom: 10px;
         }
